Updated comments